# uniswap-v3-oracles

./: .env.example  .env.local.example  .gitignore  .gitmodules  README.md  remappings.txt
circuits/: .gitignore  Cargo.toml
circuits/configs/: mainnet.json  mainnet_evm.json
circuits/data/: deployed_verifier.yul  mainnet_0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640_bcda99_fa7fae_evm.calldata  mainnet_evm.yul  task.t.json
circuits/src/: lib.rs
circuits/src/v3_twap/: helpers.rs  mod.rs  tests.rs
contracts/: foundry.toml  remappings.txt
contracts/lib/: YulDeployer.sol
contracts/script/: UniswapV3Oracle.s.sol  deploy_local.sh  start_anvil.sh
contracts/src/: IAxiomV0.sol  IUniswapV3Oracle.sol  Oracle.sol  UniswapV3Oracle.sol
contracts/test/: AxiomTest.t.sol  UniswapV3Oracle.t.sol  UniswapV3Twap.t.sol
contracts/test/data/: test.calldata  test_old.calldata
